added custom drawer layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="get_location_on_searching">Get Location on Searching</string>
     <string name="set">set</string>
     <string name="children_s">Children\'s</string>
+    <string name="add_student">Add Student</string>
+    <string name="view_report">View Report</string>
+    <string name="view_map">Student\'s Home</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 
     <string-array name="school">
         <item>Dhaka Residential Model College, Dhaka</item>
@@ -24,9 +29,28 @@
 
     <string-array name="vehicle">
         <item>Bus</item>
-        <item>Car</item>
+        <item>Personal car</item>
+        <item>Uber/Pathao</item>
         <item>CNG</item>
         <item>Rikshawa</item>
         <item>Walking</item>
+        <item>Others</item>
     </string-array>
+
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+    <string name="student_address_tracking">Student address tracking</string>
+    <string name="home">Home</string>
 </resources>
