done search corrent location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
         <item>Personal car</item>
         <item>Uber/Pathao</item>
         <item>CNG</item>
-        <item>Rikshawa</item>
+        <item>Rickshaw</item>
         <item>Walking</item>
         <item>Others</item>
     </string-array>
